# demo

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
examples/: planpro_generator.py
static/: custom.css
static/css/: custom.css  orm.css  schematic.css
static/js/: main.js  ormConverter.js  schematicConverter.js  schematicOverviewRenderer.js
templates/: base.html  index.html  orm_converter.html  schematic_converter.html
