[tool.poetry]
name = "demo"
version = "3.0"
description = "Simulate Digital Rail demo"
authors = ["OSM at HPI <arne.boockmeyer@hpi.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
railway-route-generator = {git = "https://github.com/simulate-digital-rail/railway-route-generator", branch = "yaramo2" }
orm-importer = {git = "https://github.com/simulate-digital-rail/orm-importer", branch = "yaramo2" }
planpro-exporter = {git = "https://github.com/simulate-digital-rail/planpro-exporter", branch = "yaramo2" }


[tool.poetry.group.dev.dependencies]
cli-importer = {git = "https://github.com/simulate-digital-rail/cli-importer", branch = "yaramo2" }
planpro-exporter = {git = "https://github.com/simulate-digital-rail/planpro-exporter", branch = "yaramo2" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
